Fix wrap texts on message board

--- a/static/styles.css
+++ b/static/styles.css
@@ -348,6 +348,8 @@ html, body {
 
                 .message{
                     padding-top: 24px;
+
+                    white-space: pre-wrap;
                 }
             }
 
